--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,40 @@
 .App {
   text-align: center;
+  margin: 2rem 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Card {
+  max-width: 600px;
+  margin: auto;
+  margin-bottom: 0.1rem;
+  background: #fff;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
+.Card > div {
+  display: flex;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.Card--avatar {
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  margin-right: 0.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Card--name {
+  text-transform: capitalize;
+  font-size: 1.1rem;
+}
+
+.Card--link {
+  text-decoration: none;
+  background: #00ace0;
+  color: #fff;
+  font-weight: 600;
+  padding: 0.45rem 0.7rem;
+  border-radius: 20px;
 }
